<resources>
    <string name="app_name">Sapne</string>
    <string name="all_volunteers_page">All Volunteers</string>
    <string name="linear_sectioned_recyclerview_vertical">linear sectioned recycler view</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="education_for_all">Education for all</string>
    <string name="regularcamp_para1">A teacher presents the past,
    reveals the present and creates the future, rightly said by John Holt.
    So, here at Sapne - our NGO, we are providing quality teachers, for the
    children who are willing to study and who want to make their future bright
    but due to some obstacles , they are unable to do so. Due to this reason,
    we are teaching them, making them capable for themselves and for the
    society too. We have organized regular camps in which we teach students,
    we provide the children with the academic education and apart from this,
    we play with them, we teach them how to live life to its fullest. And in
    the two hours of the camp, those children are so happy that their happiness, their joy, their cheer, cannot be expressed in words.</string>
    <string name="regularcamp_para2">We believe that , Learning is not the product of teaching , Learning is the product of activities of learners .
        So we indulge the children in various kinds of activities of their own interest and also in other activities which can benefit them in future.
        We dance together , we sing together , we play together , we study together , we giggle together , we gossip together , we share our memories ,
        our experiences in those two hours of regular camps organized by Sapne For us , every sapna , every dream is important and hence we try our best to accomplish that ,
        if not accomplish , we try our best to give that dream , a direction. For this , we provide teachers , who are skilled in their field of work and
        accordingly they teach , they train the students . In this way teachers get the platform to teach and express or share their knowledge , moreover ,
        increase their knowledge , and students get quality education .</string>
    <string name="regularcamp_para3">While moving on the roads , we see many children who have not worn proper clothes , who are deprived of the basic needs ,
    who should study and play at this age , but due to their financial conditions , they can\'t even think of doing all these things because , for them ,
    three-time meal is more than enough for survival. Now the question arrises , What do we , as responsible citizen of the country , do for them ? Except for
    showing concern , except for being sympathetic , we do nothing . But Sapne , our NGO , is proud to tell that , we are doing something , we have taken first
    step and it is the First step that leads to the Final step . And we are sure that we will definitely reach till the final step with the support of our team and
    the children who want to make their future bright and satisfying .</string>
    <string name="signup">"No account yet? Create one"</string>
    <string name="short_lorem_ipsum">Her name is Sapna, a young girl who recently migrated to Delhi from Nepal, along with her parents. The first few months in Delhi were tough. Having little knowledge of Hindi, the common language, Sapna struggled to communicate with other kids of her dilapidated locality in Delhi. But not only does she share her name with our organisation, she shares SAPNE\'s grit and determination as well! Since the past three months, Sapnas been working diligently on her Hindi under the guidance of tutors provided by SAPNE. Her hardwork seems to be paying off and she can now converse and play with her friends with relative ease. During one of the career counselling sessions organised by SAPNE at her locality, Sapna shared her dream of becoming a doctor when she grows up. "I want to help the needy" she says with her trademark adorable smile. Help her fulfil her dreams.</string>
    <string name="medium_lorem_ipsum">"AJAY, a 26 year old boy suffering from EPILEPSY,a neurological disorder. He is a man of great inspiration for all of us. Ajay is so keen to get himself educated like all the other children. His innocence,dedication and hard work will not let him down. Despite facing the major problems he has in his life,his struggle fades all the other things that hinders the path of learning. He has that zeal to attain good and achieve best. We are very much involved into him by supporting his efforts. Are you? Help us so that we could provide him the best he wants."</string>
    <string name="long_lorem_ipsum">"Manpreet, despite belonging to a underprivileged section of the society is an integral part of SAPNE family and is no less than any of the so-called “rich children”. But due to some social and economic barriers, her dreams are somehow being neglected. She wants to adore her life and aspires to be a successful and respected teacher. Though, she has some learning disabilities and speech defects but, due to this, her dreams should not be shattered. So, we, with the help of our special educators are teaching her through the play-way method and hence she is edging towards her dreams."</string>
    <string name="about_para_1">Education is not preparation for life; education is life itself - rightly said by John Deway. \n\n Education is life and life is the right of each and every human living on the earth whether she/he is poor , rich or anyone . But due to lack of some resources , the so-called money , the so-called wealth , the poor section of our society is struggling for basic needs like education, food , shelter , clothing ,etc.
    And we as the responsible citizens of the country must bridge the gap between rich and poor . So to give this thought a direction, we have "SAPNE" , an NGO which is there to educate , to provide some basic requirements to the unprivileged section of children.</string>
    <string name="about_para_2">So, Sapne is working for the betterment of the children who do not know the real meaning of their life by analyzing their sapne , their dreams , we provide them the way to their dreams , we enlighten the way of their dreams. In this world , everyone dreams and everyone chase their respective dreams , so why can\'t these children ? They also have dreams and they also have right to fulfill their dreams and they must also know and hence we teach them that , " A dream is not that you see in sleep , dream is something that doesn\'t let you sleep."</string>
    <string name="title_activity_our_mission">OurMission</string>
    <string name="mission_1">Develop research teams and centres with special focus on developing advanced curriculum for the children of the NGO.</string>
    <string name="mission_0">Create at least 20 educational camps all over Delhi in next 2 years.</string>
    <string name="mission_2">Creating job opportunities in distinct fields and train at least 1000 employable youth for specialized and well respected roles.</string>
    <string name="about_us">About Us</string>
    <string name="our_mission">Our Mission</string>
    <string name="mission_3">Establish a Gurukul with a functional library, ground, auditorium and accommodation for the kids.</string>
    <string name="mission_4">Include more trained and experienced teachers into the SAPNE family to train the kids.</string>
    <string name="title_activity_our_vision">Our Vision</string>
    <string name="vision_0">SAPNE is working towards developing skills and providing special teaching aids in order to make the knowledge accessible to all. This will be done through our Gurukuls, or Education centres, for children where they can learn, play and get a chance of realizing their sapne (dreams).</string>
    <string name="vision_1">The ultimate aim is to create a highly aware generation of youth that is not susceptible to social and financial barriers and can fight their own battles with the power of knowledge and skills.</string>
    <string name="title_activity_our_team">Our Team</string>
    <string name="team_devesh">An Accountant/Social Worker/Entrepreneur/Event organizer. He is young Enthusiastic , Energetic and active personality with have positive approach towards life. He is a founder of SAPNE. He founded SAPNE with a promising commitment towards the nation and the Society. He is positive , Intellectual and funny at the same time. He loves kids and love to interact with them.</string>
    <string name="events_intro">“The function of education is to teach one to think intensively and to think critically. Intelligence plus character - that is the goal of true education. - Martin Luther King, Jr.
    \n\nThis is what SAPNE believes in. And to accomplish this goal we provide education to all the underprivileged children.</string>
    <string name="events_0_1">“A teacher presents the past, reveals the present and creates the future.”</string>
    <string name="events_0_2">Providing education does not only mean giving them the knowledge of alphabets and numbers but also includes overall development of the children. For this we encourage skill development along with academic education. We train them in co-curricular areas like drawing, handicraft, dancing, English speaking, extempore along with other activities which are conducted regularly in form of events.</string>
    <string name="events_0_3">Health camps are also held once or twice in a month where we provide free health check up and also create awareness about hygiene and cleanliness amongst the people. The classes are held daily from Monday– Saturday at 4–6 in evening. At present 4 educational camps are working in this field.</string>
    <string name="events_2_1">Express Your Dreams</string>
    <string name="events_2_2">No matter from where you belong, your dreams are valid and feasible. And that is why SAPNE was formed - to value everyone\'s dream. This event was held on 29th June 2016 at D-Mall, Rohini, Delhi. The event was anchored by Mr. Devesh Mittal, Ms. Diivya Verma, Mr. Anurag Pandey and the whole Sapne Team participated.</string>
    <string name="events_2_3"><![CDATA[Truth & Dare]]></string>
    <string name="events_2_4">This event was organised at Netaji Subhash Place, Delhi with an aim to bring out some hidden curiosity among the people. The theme of this event was to put some daring people forward to try and attempt the dares given to them by the volunteers which were meant for social welfare. The active involvement of the people made it a huge success.</string>
    <string name="events_3_1">Independence Day</string>
    <string name="events_3_3">Cleanliness Drive</string>
    <string name="events_3_2">SAPNE along with the children from various sections of the deprived society celebrated the Independence Day at Siraspur, Delhi. It was an occasion of both Independence Day as well as opening ceremony of the centre. Flag hoisting was followed by some cultural programs. The program consisted of patriotic group song, graceful dance and short plays.</string>
    <string name="events_3_4">On the auspicious occasion of Ganesh Chaturthi, we came across a canal in Rohini Sec- 18, Delhi which was long overdue and it was getting noxious for the ones living nearby. Our group of volunteers initiated the drive and dedicated themselves to this movement whole heartedly. Holding up the broom in hand and with determination in the heart to clean the dirt, to make Swachh Bharat Abhiyan a great success across the nation.</string>
    <string name="events_0_4">These camps are: ~District Park I block, Sector - 16, Rohini, Delhi-89 ~Nursery Park, Sector -16, G Block, Rohini, Delhi - 89 ~Sector - 16, slum side, near Ambedkar Bhawan, Rohini, Delhi - 85 ~ Siraspur, Delhi</string>
</resources>