<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.intents.sapne.EventsFrag1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="0dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="#50ffffff"
                app:contentPadding="6dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:src="@drawable/z12"
                        android:layout_marginTop="-10dp"
                        android:contentDescription="@null" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events_intro"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:shadowColor="#80ffffff"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="3"
                        android:fontFamily="serif"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="0dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="#50ffffff"
                app:contentPadding="6dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events_0_1"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/events_0_2"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="0dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="#50ffffff"
                app:contentPadding="6dp"
                app:cardElevation="7dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events_0_3"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/events_0_4"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
