<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.intents.sapne.ngo.example.intents.sapne.AboutUs"
    tools:showIn="@layout/activity_about_us">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/education_for_all"
            android:textColor="#424242"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
           />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="#E6E6E6"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/z4"
                />
        </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_para_1"
            android:textSize="16sp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="10dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="#E6E6E6">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/z3" />
        </android.support.v7.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/about_para_2"
            android:textSize="16sp" />




    </LinearLayout>
</ScrollView>
