<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.intents.sapne.EventsFrag1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#50ffffff"
                app:cardCornerRadius="3dp"
                app:cardElevation="7dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="6dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:shadowColor="#80ffffff"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="3"
                        android:text="@string/events_2_1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="7dp"
                        android:contentDescription="@null"
                        android:src="@drawable/e3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/events_2_2"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#50ffffff"
                app:cardCornerRadius="3dp"
                app:cardElevation="7dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="6dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:shadowColor="#80ffffff"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="3"
                        android:text="@string/events_2_3"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="7dp"
                        android:contentDescription="@null"
                        android:src="@drawable/e4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/events_2_4"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
