<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.intents.sapne.EventsFrag5"
    android:background="@drawable/event_grad">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="serif"
                android:shadowColor="#80ffffff"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/events_3_1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#50ffffff"
                app:cardCornerRadius="3dp"
                app:cardElevation="7dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="6dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="7dp"
                        android:contentDescription="@null"
                        android:src="@drawable/e5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/events_3_2"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:shadowColor="#80ffffff"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                android:text="@string/events_3_3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#50ffffff"
                app:cardCornerRadius="3dp"
                app:cardElevation="7dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="6dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="7dp"
                        android:contentDescription="@null"
                        android:src="@drawable/e6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/events_3_4"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/events_explore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="Explore more..."/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
